--- a/webtool/hostingstart.html
+++ b/webtool/hostingstart.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 
-<h1>Hello World!</h1>
+<center><h1>Happy Shopping!</h1></center>
 
 <h3 id="toc-basic-demo">Basic demo</h3>
 
 <div id="basic" style="text-align:center;">
   <video class="videostream" autoplay></video>
-  <p><button class="capture-button">Capture video</button> <button id="stop-button">Stop</button></p>
+  <p><button class="capture-button">Capture video</button> <button id="screenshot-button">Take screenshot</button> <button id="stop-button">Stop</button></p>
 </div>
 
 <script src="video.js"></script>
