--- a/webtool/hostingstart.html
+++ b/webtool/hostingstart.html
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html>
-
+<head>
+    <title>JSSample</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+</head>
 <center><h1>Happy Shopping!</h1></center>
 
 <div id="screenshot" style="text-align:center;">
@@ -8,6 +11,35 @@
   <p><button class="capture-button">Capture video</button> <p><button id="screenshot-button" disabled>Take screenshot</button></p>
 </div>
 
-<script src="video.js"></script>
+<script src="video.js">
+$(function() {
+    alert("asdf");
+    var params = {
+        // Request parameters
+        "returnFaceId": "true",
+        "returnFaceLandmarks": "false",
+    };
+
+    $.ajax({
+        url: "https://eastus.api.cognitive.microsoft.com/face/v1.0/detect?" + $.param(params),
+        beforeSend: function(xhrObj){
+            // Request headers
+            xhrObj.setRequestHeader("Content-Type","application/json");
+            xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key","dd09200b03b54ab58a6ea35fd000b56d");
+        },
+        type: "POST",
+        // Request body
+        data: {
+           imgBase64: dataURL
+        },
+    })
+    .done(function(data) {
+        alert("success");
+    })
+    .fail(function() {
+        alert("error");
+    });
+});
+</script>
 
 </html>
