--- a/webtool/hostingstart.html
+++ b/webtool/hostingstart.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 
-<center><h1>Happy Shopping!</h1></center>
+<center><h1 style="color:#ea0a8e">Happy Shopping!</h1></center>
 
 <div id="screenshot" style="text-align:center;">
   <video class="videostream" autoplay></video>
   <img id="screenshot-img">
-  <p><button class="capture-button">Capture video</button> <p><button id="screenshot-button" disabled>Take screenshot</button></p>
+  <p><button class="capture-button" font="24pt">Capture video</button> <p><button id="screenshot-button" disabled font="24pt">Take screenshot</button></p>
 </div>
 
 <script src="video.js"></script>
