Responsive web version 1. Resources added.

--- a/webtool/hostingstart.html
+++ b/webtool/hostingstart.html
@@ -8,6 +8,8 @@
   <p><button class="capture-button" font="24pt">Capture video</button> <p><button id="screenshot-button" disabled font="24pt">Take screenshot</button></p>
 </div>
 
+<div id="response"></div>
+
 <script src="video.js"></script>
 
 </html>
