--- a/webtool/hostingstart.html
+++ b/webtool/hostingstart.html
@@ -2,13 +2,15 @@
 
 <center><h1 style="color:#ea0a8e">Happy Shopping!</h1></center>
 
+<center>
+<img id="meme" src="meme1.png" width="50%">
+</center>
+
 <div id="screenshot" style="text-align:center;">
   <video class="videostream" autoplay></video>
   <img id="screenshot-img">
-  <p><button class="capture-button" font="24pt">Capture video</button> <p><button id="screenshot-button" disabled font="24pt">Take screenshot</button></p>
+  <p><button class="capture-button" font="32pt">Capture video</button> <p><button id="screenshot-button" disabled font="32pt">Take screenshot</button></p>
 </div>
-
-<div id="response"></div>
 
 <script src="video.js"></script>
 
